// hero/hero.proto
syntax = "proto3";
import "google/protobuf/any.proto";
package transaction;

service TransactionService {
  rpc FindOneById (TransactionById) returns (ResData) {}
  rpc FindAll (empty) returns (ResDataFindAll) {}
  rpc Create (CreateTransaction) returns (ResData) {}
  rpc Update (UpdateTransaction) returns (ResData) {}
  rpc Delete (TransactionById) returns (ResData) {}
}

message TransactionById {
  int32 id = 1;
}
message empty {
}

message RepeatedTransaction {
  repeated Transaction transactions = 1;
}

message ResData {
  string message = 1;
  int32 statusCode = 2;
  Transaction data = 3;
  string error = 4;
}
message ResDataFindAll {
  string message = 1;
  int32 statusCode = 2;
  RepeatedTransaction data = 3;
  string error = 4;
}

message CreateTransaction {
  int32 shotCreditId = 1;
  int32 shotDebitId = 2;
  int32 serviceId = 3;
  int32 amount = 4;
}

message UpdateTransactionData {
  int32 shotCreditId = 1;
  int32 shotDebitId = 2;
  int32 serviceId = 3;
  int32 amount = 4;
}

message UpdateTransaction {
  int32 id = 1;
  UpdateTransactionData data = 2;
}

message Transaction {
  int32 id = 1;
  int32 shotCreditId = 2;
  int32 shotDebitId = 3;
  int32 serviceId = 4;
  int32 amount = 5;
  string createdAt = 6;
  string lastEditededAt = 7;
}